--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <title>Путешествия по России</title>
 </head>
 
-<body>
-  <div class="page">
+<body class="page">
+  <div>
     <header class="header">
       <img class="header__logo" alt="Логотип Россия" src="./images/header-logo.svg">
       <ul class="header__land-links">
