--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <title>Путешествия по России</title>
 </head>
 
-<body class="page">
-  <div>
+<body class="page">  
     <header class="header">
       <img class="header__logo" alt="Логотип Россия" src="./images/header-logo.svg">
       <ul class="header__land-links">
@@ -95,8 +94,8 @@
               прикидывающийся Баренцевым морем.</p>
             <p class="place__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю
               арктического фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось
-              под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно, вы&nbsp;не&nbsp;интересовались
-              пронизывающей земную кору сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов вас давно накрывает
+              под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно, вы&nbsp;не интересовались
+              пронизывающей земную кору сверхглубокой скважиной, а&nbsp;от апатитов вас давно накрывает
               апатия. Но&nbsp;ваша мечта увидеть северное сияние начинает сбываться с&nbsp;билетом
               в&nbsp;Мурманск.</p>
           </div>
@@ -133,7 +132,7 @@
               в&nbsp;мире.&nbsp;Многие также знают, что это самый большой источник пресной воды
               и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.</p>
             <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для
-              соревнований по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя
+              соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя
               к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость
               на&nbsp;льду. В&nbsp;марте 2019&nbsp;года&nbsp;на фестивале &laquo;Байкальская миля&raquo; был
               поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.</p>                          
@@ -178,8 +177,7 @@
         </ul>
       </nav>
       <p class="footer__copyright">&copy; 2022 Попова Юлия</p>
-    </footer>
-  </div>
+    </footer>  
 </body>
 
 </html>
